tests/reject/infer_use_before_ground.hi
fn main():
    xs := []
    print(str(len(xs)))
